--- a/.github/workflows/generate-index.yml
+++ b/.github/workflows/generate-index.yml
@@ -1,51 +1,69 @@
-name: Generate JSON files
+name: Auto Generate JSON Indexes
 
 on:
   push:
     paths:
-      - "texts/dictation/**"
       - "texts/typing/**"
+      - "texts/dictation/**"
 
 jobs:
   generate:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      # -------------------------------
+      # 1) Checkout repo
+      # -------------------------------
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 1) dictation.json: lấy .txt + .md trong texts/dictation
+      # -------------------------------
+      # 2) Generate dictation.json
+      # -------------------------------
       - name: Generate dictation.json
         run: |
           echo "[" > dictation.json
           first=true
-          find texts/dictation -type f \( -iname "*.txt" -o -iname "*.md" \) | sort -V | while IFS= read -r f; do
-            fname=$(basename "$f")
-            if [ "$first" = true ]; then
-              printf '  "%s"\n' "$fname" >> dictation.json
-              first=false
-            else
-              printf '  ,"%s"\n' "$fname" >> dictation.json
-            fi
+
+          # Tìm tất cả file .txt và .md trong texts/dictation
+          find texts/dictation -type f \( -iname "*.txt" -o -iname "*.md" \) \
+          | sort -V | while IFS= read -r f; do
+              fname=$(basename "$f")
+              if [ "$first" = true ]; then
+                  printf '  "%s"\n' "$fname" >> dictation.json
+                  first=false
+              else
+                  printf '  ,"%s"\n' "$fname" >> dictation.json
+              fi
           done
+
           echo "]" >> dictation.json
 
-      # 2) index.json: lấy .txt + .md trong texts/typing
+      # -------------------------------
+      # 3) Generate index.json
+      # -------------------------------
       - name: Generate index.json
         run: |
           echo "[" > index.json
           first=true
-          find texts/typing -type f \( -iname "*.txt" -o -iname "*.md" \) | sort -V | while IFS= read -r f; do
-            fname=$(basename "$f")
-            if [ "$first" = true ]; then
-              printf '  "%s"\n' "$fname" >> index.json
-              first=false
-            else
-              printf '  ,"%s"\n' "$fname" >> index.json
-            fi
+
+          # Tìm tất cả file .txt và .md trong texts/typing
+          find texts/typing -type f \( -iname "*.txt" -o -iname "*.md" \) \
+          | sort -V | while IFS= read -r f; do
+              fname=$(basename "$f")
+              if [ "$first" = true ]; then
+                  printf '  "%s"\n' "$fname" >> index.json
+                  first=false
+              else
+                  printf '  ,"%s"\n' "$fname" >> index.json
+              fi
           done
+
           echo "]" >> index.json
 
+      # -------------------------------
+      # 4) Commit JSON output
+      # -------------------------------
       - name: Commit JSON outputs
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
