--- a/.github/workflows/generate-index.yml
+++ b/.github/workflows/generate-index.yml
@@ -2,9 +2,11 @@ name: Auto Generate JSON Indexes
 
 on:
   push:
+    branches: [ main ]
     paths:
       - "texts/typing/**"
       - "texts/dictation/**"
+      - ".github/workflows/generate-index.yml"
 
 jobs:
   generate:
@@ -14,18 +16,25 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: DEBUG – Show repo structure
+        run: |
+          echo "PWD:"
+          pwd
+          echo "FILES:"
+          ls -R .
+
       - name: Generate dictation.json
         run: |
           echo "[" > dictation.json
           first=true
-          find texts/dictation -type f \( -iname "*.txt" -o -iname "*.md" \) \
+          find ./texts/dictation -type f \( -iname "*.txt" -o -iname "*.md" \) \
           | sort -V | while IFS= read -r f; do
               fname=$(basename "$f")
               if [ "$first" = true ]; then
-                  printf '  "%s"\n' "$fname" >> dictation.json
+                  printf '  \"%s\"\n' "$fname" >> dictation.json
                   first=false
               else
-                  printf '  ,"%s"\n' "$fname" >> dictation.json
+                  printf '  ,\"%s\"\n' "$fname" >> dictation.json
               fi
           done
           echo "]" >> dictation.json
@@ -34,14 +43,14 @@ jobs:
         run: |
           echo "[" > index.json
           first=true
-          find texts/typing -type f \( -iname "*.txt" -o -iname "*.md" \) \
+          find ./texts/typing -type f \( -iname "*.txt" -o -iname "*.md" \) \
           | sort -V | while IFS= read -r f; do
               fname=$(basename "$f")
               if [ "$first" = true ]; then
-                  printf '  "%s"\n' "$fname" >> index.json
+                  printf '  \"%s\"\n' "$fname" >> index.json
                   first=false
               else
-                  printf '  ,"%s"\n' "$fname" >> index.json
+                  printf '  ,\"%s\"\n' "$fname" >> index.json
               fi
           done
           echo "]" >> index.json
