--- a/.github/workflows/generate-index.yml
+++ b/.github/workflows/generate-index.yml
@@ -27,10 +27,12 @@ jobs:
         run: |
           echo "[" > dictation.json
           first=true
-          find ./texts/dictation -type f -iname "*.txt" -o -iname "*.md" \
-          | sort -V | while IFS= read -r f; do
+          (
+            find ./texts/dictation -type f -iname "*.txt"
+            find ./texts/dictation -type f -iname "*.md"
+          ) | sort -V | while IFS= read -r f; do
               fname=$(basename "$f")
-              if [ "$first" = true ]; then
+              if [ "$first" = true ];then
                   printf '  \"%s\"\n' "$fname" >> dictation.json
                   first=false
               else
@@ -43,8 +45,10 @@ jobs:
         run: |
           echo "[" > index.json
           first=true
-          find ./texts/typing -type f -iname "*.txt" -o -iname "*.md" \
-          | sort -V | while IFS= read -r f; do
+          (
+            find ./texts/typing -type f -iname "*.txt"
+            find ./texts/typing -type f -iname "*.md"
+          ) | sort -V | while IFS= read -r f; do
               fname=$(basename "$f")
               if [ "$first" = true ]; then
                   printf '  \"%s\"\n' "$fname" >> index.json
