--- a/.github/workflows/generate-index.yml
+++ b/.github/workflows/generate-index.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0   # IMPORTANT: needed for pushing commits
+          fetch-depth: 0   # required for git log
 
       - name: DEBUG – Show repo structure
         run: |
@@ -25,42 +25,65 @@ jobs:
           echo "FILES:"
           ls -R .
 
+      # -----------------------------
+      # Generate dictation.json
+      # -----------------------------
       - name: Generate dictation.json
         run: |
           echo "[" > dictation.json
           first=true
-          (
-            find ./texts/dictation -type f -iname "*.txt"
-            find ./texts/dictation -type f -iname "*.md"
-          ) | sort -V | while IFS= read -r f; do
+
+          git ls-files --others --cached --exclude-standard texts/dictation \
+          | while read -r f; do
+              ts=$(git log -1 --format="%ct" -- "$f" 2>/dev/null || echo 0)
+              echo "$ts $f"
+            done \
+          | sort -nr \
+          | awk '{print $2}' \
+          | while read -r f; do
               fname=$(basename "$f")
+
               if [ "$first" = true ]; then
                   printf '  \"%s\"\n' "$fname" >> dictation.json
                   first=false
               else
                   printf '  ,\"%s\"\n' "$fname" >> dictation.json
               fi
-          done
+            done
+
           echo "]" >> dictation.json
 
+      # -----------------------------
+      # Generate index.json
+      # -----------------------------
       - name: Generate index.json
         run: |
           echo "[" > index.json
           first=true
-          (
-            find ./texts/typing -type f -iname "*.txt"
-            find ./texts/typing -type f -iname "*.md"
-          ) | sort -V | while IFS= read -r f; do
+
+          git ls-files --others --cached --exclude-standard texts/typing \
+          | while read -r f; do
+              ts=$(git log -1 --format="%ct" -- "$f" 2>/dev/null || echo 0)
+              echo "$ts $f"
+            done \
+          | sort -nr \
+          | awk '{print $2}' \
+          | while read -r f; do
               fname=$(basename "$f")
+
               if [ "$first" = true ]; then
                   printf '  \"%s\"\n' "$fname" >> index.json
                   first=false
               else
                   printf '  ,\"%s\"\n' "$fname" >> index.json
               fi
-          done
+            done
+
           echo "]" >> index.json
 
+      # -----------------------------
+      # Commit output JSON
+      # -----------------------------
       - name: Commit JSON outputs
         run: |
           git config user.name "github-actions[bot]"
