--- a/.github/workflows/generate-index.yml
+++ b/.github/workflows/generate-index.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0   # required for git log
+          fetch-depth: 0   # Needed for git log history
 
       - name: DEBUG – Show repo structure
         run: |
@@ -25,9 +25,9 @@ jobs:
           echo "FILES:"
           ls -R .
 
-      # -----------------------------
-      # Generate dictation.json
-      # -----------------------------
+      # --------------------------------------------------
+      # Generate dictation.json  (sorted by commit time)
+      # --------------------------------------------------
       - name: Generate dictation.json
         run: |
           echo "[" > dictation.json
@@ -36,26 +36,26 @@ jobs:
           git ls-files --others --cached --exclude-standard texts/dictation \
           | while read -r f; do
               ts=$(git log -1 --format="%ct" -- "$f" 2>/dev/null || echo 0)
-              echo "$ts $f"
+              printf "%s\t%s\n" "$ts" "$f"
             done \
           | sort -nr \
-          | awk '{print $2}' \
+          | awk -F '\t' '{print $2}' \
           | while read -r f; do
               fname=$(basename "$f")
 
               if [ "$first" = true ]; then
-                  printf '  \"%s\"\n' "$fname" >> dictation.json
-                  first=false
+                printf '  \"%s\"\n' "$fname" >> dictation.json
+                first=false
               else
-                  printf '  ,\"%s\"\n' "$fname" >> dictation.json
+                printf '  ,\"%s\"\n' "$fname" >> dictation.json
               fi
             done
 
           echo "]" >> dictation.json
 
-      # -----------------------------
-      # Generate index.json
-      # -----------------------------
+      # --------------------------------------------------
+      # Generate index.json  (sorted by commit time)
+      # --------------------------------------------------
       - name: Generate index.json
         run: |
           echo "[" > index.json
@@ -64,26 +64,26 @@ jobs:
           git ls-files --others --cached --exclude-standard texts/typing \
           | while read -r f; do
               ts=$(git log -1 --format="%ct" -- "$f" 2>/dev/null || echo 0)
-              echo "$ts $f"
+              printf "%s\t%s\n" "$ts" "$f"
             done \
           | sort -nr \
-          | awk '{print $2}' \
+          | awk -F '\t' '{print $2}' \
           | while read -r f; do
               fname=$(basename "$f")
 
               if [ "$first" = true ]; then
-                  printf '  \"%s\"\n' "$fname" >> index.json
-                  first=false
+                printf '  \"%s\"\n' "$fname" >> index.json
+                first=false
               else
-                  printf '  ,\"%s\"\n' "$fname" >> index.json
+                printf '  ,\"%s\"\n' "$fname" >> index.json
               fi
             done
 
           echo "]" >> index.json
 
-      # -----------------------------
-      # Commit output JSON
-      # -----------------------------
+      # --------------------------------------------------
+      # Commit JSON changes
+      # --------------------------------------------------
       - name: Commit JSON outputs
         run: |
           git config user.name "github-actions[bot]"
